--- a/jigsaw/src/style.css
+++ b/jigsaw/src/style.css
@@ -1,4 +1,3 @@
-
 *{
     margin: 0;
     padding: 0;
@@ -25,7 +24,8 @@ body{
     display: flex;
     flex-flow: row nowrap;
     width: 100%;
-    height: 200px;
+    min-width: 700px;
+    height: 160px;
     background-color: #4db6ac;
 }
 
@@ -37,13 +37,11 @@ body{
 
 .part{
     flex: 1;
+    justify-content: center;
     display: flex;
     padding: 10px;
-    border: 1px solid #999;
 }
 
-.f-start{justify-content: flex-start;}
-.f-end{justify-content: flex-end;}
 .mar-t10{margin-top: 10px;}
 
 input{
@@ -55,12 +53,39 @@ input{
     color: #4db6ac;
 }
 
+.number-input{
+    display: inline-block;
+    position: relative;
+}
+
 input:focus{
     outline: none;
 }
 
 .size{
-    width: 50px;
+    width: 89px;
+}
+
+.drop-icon{
+    position: absolute;
+    right: 3px;
+    color: #009688;
+    font-size: 20px;
+    line-height: .5 !important;
+}
+
+.disabled-drop-icon{
+    color: #cfd8dc;
+}
+
+.up-icon{
+    top: 0;
+    padding-top: 4px;
+}
+
+.down-icon{
+    bottom: 0;
+    padding-bottom: 4px;
 }
 
 button{
@@ -111,10 +136,10 @@ button:focus{
 .pic{
     display: flex;
     flex-flow: row wrap; 
-    align-content: flex-start;
-    width: 600px;
-    height: 600px;
-    margin: 20px auto;
+    align-content: space-between;
+    width: 700px;
+    height: 700px;
+    margin: 30px auto;
     padding: 4px;
     background-color: #b2dfdb;
     position: relative;
@@ -123,6 +148,7 @@ button:focus{
 .block{
     flex-grow: 1;
     padding: 1px;
+    position: relative;
 }
 
 .selected .piece{
@@ -132,8 +158,21 @@ button:focus{
 .piece{
     width: 100%;
     height: 100%;
-    /* background-image: url("../res/bg_6.jpg"); */
     background-repeat:no-repeat;
+    transition: transform .3s;
+}
+
+.rotate-icon{
+    display: none;
+    position: absolute;
+    top: 3px;
+    left: 3px;
+    font-size: 20px;
+    color: #009688;
+}
+
+.block:hover .rotate-icon{
+    display: inline-block;
 }
 
 .pos-r{
