--- a/visual_data/src/style.css
+++ b/visual_data/src/style.css
@@ -23,7 +23,6 @@ body{
     width: 300px;
     overflow-y: auto;
     border-right: 1px solid #dbd6db;
-    /* background-color: #78cbec; */
 }
 
 .right{
@@ -49,6 +48,7 @@ textarea{
     width: 100%;
     min-width: 100%; 
     max-width: 100%;
+    height: 400px;
     min-height: 250px;
     margin-top: 10px; 
     font-family: inherit;
@@ -56,6 +56,12 @@ textarea{
 
 textarea:focus{
     outline-color: #862a7b
+}
+
+.tip{
+    margin-top: 10px;
+    font-size: 12px;
+    color: red;
 }
 
 button{
@@ -73,7 +79,7 @@ button:focus{
 }
 
 .main{
-    width: 750px;
+    width: 500px;
     height: 100%;
     margin: 0 auto;
 }
@@ -81,4 +87,7 @@ button:focus{
 #chart{
     white-space: pre-wrap;
     font-family: Courier,Courier New,Consolas;  /* 设置等宽字体 */
+    font-size: 18px;
+    line-height: 1em;
+    padding-top: 30px;
 }
